--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.11.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
@@ -20,9 +21,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.18.0",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.9.0"
+    "sweetalert2": "^11.9.0",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
