--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0",
+    "swiper": "^11.0.3",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
