--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-parallax-tilt": "^1.7.172",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
