--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@table-library/react-table-library": "^4.1.7",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "hamburger-react": "^2.5.0",
+    "ka-table": "^8.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
