--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "match-sorter": "^6.3.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
